# bestLogger

./: CMakeLists.txt  Makefile  README.md
inc/: Logger.hpp  utils.hpp
src/: Logger.cpp  main.cpp  utils.cpp
